# isaac_hsr

./: .gitignore  README.md  docker-compose.yml
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_launch/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_launch/config/: hsr.rviz
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_launch/launch/: common.launch  wrs_practice0.launch
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/: CMakeLists.txt  bashscript.sh  package.xml
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/env-hooks/: 99.tmc_wrs_gazebo_worlds.bash.em  CMakeLists.txt
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/trofast_knob/: output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bin_black/: output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bin_green/: model.sdf  output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bookshelf/: model.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_container_b/: model.sdf  output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_frame/: output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_ground_plane/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_long_table/: model.config  output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_stair_like_drawer/: model.sdf  output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_tall_table/: model.sdf  output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_tray/: output.usda
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_002_master_chef_can/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_004_sugar_box/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_007_tuna_fish_can/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_008_pudding_box/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_009_gelatin_box/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_015_peach/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_016_pear/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_017_orange/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_022_windex_bottle/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_028_skillet_lid/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_035_power_drill/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_037_scissors/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_042_adjustable_wrench/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_054_softball/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_055_baseball/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_058_golf_ball/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_061_foam_brick/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_070-a_colored_wood_blocks/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_070-b_colored_wood_blocks/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_072-b_toy_airplane/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_072-e_toy_airplane/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_073-e_lego_duplo/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/ycb_073-g_lego_duplo/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/trofast/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/wrc_bin_black/: model.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/wrc_tall_table/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_004_sugar_box/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_005_tomato_soup_can/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_009_gelatin_box/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_010_potted_meat_can/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_011_banana/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_012_strawberry/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_014_lemon/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_018_plum/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_019_pitcher_base/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_031_spoon/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_036_wood_block/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_037_scissors/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_044_flat_screwdriver/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_051_large_clamp/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_052_extra_large_clamp/: model-1_4.sdf  model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_054_softball/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_055_baseball/: model-1_4.sdf
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models_old/ycb_056_tennis_ball/: model.config
sdf2usd_env/tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/scripts/: spawn_objects
(+252 files in other folders)
